# Bot-Discord

./: .dockerignore  .env  .env.example  .eslintignore  .eslintrc.json  .gitignore  .gitlab-ci.yml  .gitleaksignore  .npmrc  .pre-commit-ci.yaml  .pre-commit-config.yaml  CHANGELOG.adoc  CONTRIBUTING.adoc  Dockerfile  LICENSE  README.adoc  eslint.config.js  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  shell.nix  tsconfig.json
.husky/: pre-commit
docs/: antora.yml  docusaurus.config.ts  package-lock.json  package.json  shell.nix  sidebars.ts  tsconfig.client.json
docs/src/: ImageRenderers.tsx
modules/epsi-edt/: Cargo.toml  README.md  package.docker.json  package.json
modules/epsi-edt/src/: lib.rs
modules/epsi-edt/src/irori_edt/: format.rs  mod.rs  scraper.rs
modules/ha-redis/: .gitignore  Cargo.toml  README.md  package-lock.json  package.docker.json  package.json
modules/ha-redis/src/: lib.rs
prisma/: schema.prisma
src/: .env  app.ts  global.d.ts  index.ts  mikro-orm.config.ts  types.d.ts
src/buttons/: role.ts  tempChannelDelete.ts
src/class/: ActiveHA.ts  AppCommand.ts  Button.ts  EpsiEDT.ts  Event.ts  Handler.ts  LogManager.ts  Logger.ts  Modal.ts  SubCommand.ts
src/commands/: AddPrisonerRole.ts  RemovePrisonerRole.ts  addTempChannel.ts  config.ts  edt.ts  help.ts  muteUser.ts  ping.ts  roleSpe.ts  roles.ts  signalMessage.ts  signalUsername_message.ts  signalUsername_user.ts  status.ts  support.ts  tempChannel.ts  timeoutUser.ts  unmute.ts  unmuteUser.ts
src/entities/: BaseEntity.ts  Group.ts  Guild.ts  Moderation.ts  (+2 more)
(+65 files in other folders)
